--- a/site/themes/sogilis/assets/css/article.css
+++ b/site/themes/sogilis/assets/css/article.css
@@ -3,12 +3,12 @@
 /* TODO remove preceding comment when we will migrate to another tool */
 
 #blog_articlepage {
-    margin-bottom: 5rem;
-    display: flex;
-    flex-direction: column;
-    max-width: inherit;
-    font-size: 1.2rem;
-    color: var(--medium-grey);
+  margin-bottom: 5rem;
+  display: flex;
+  flex-direction: column;
+  max-width: inherit;
+  font-size: 1.2rem;
+  color: var(--medium-grey);
 }
 
 /* Following should be reset to `initial' into article.css */
@@ -16,18 +16,19 @@
 
 #blog_articlepage a,
 #blog_articlepage a:hover {
-    text-decoration: initial;
+  text-decoration: initial;
 }
 
 #blog_articlepage ul {
-    list-style-type: initial;
+  list-style-type: initial;
 }
 
 /* Folliwng copied from Bootstrap 4.4.1 */
 /* following is not into reboot.css */
 /* ========================================================================== */
 
-code { /* Line 503 into bootstrap.css 4.4.1 */
+code {
+  /* Line 503 into bootstrap.css 4.4.1 */
   font-size: 87.5%;
   color: #e83e8c;
   word-wrap: break-word;
@@ -74,102 +75,108 @@ samp {
   font-family: 'EB Garamond', serif;
 }
 
-h2, h3, h4, h5, h6 {
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-top: 1.5em;
 }
 
-blockquote, pre, .blog_articlepage_img {
-    box-shadow: 0 0 1rem 0.2rem rgba(0, 0, 0, .15);
+blockquote,
+pre,
+.blog_articlepage_img {
+  box-shadow: 0 0 1rem 0.2rem rgba(0, 0, 0, 0.15);
 }
 
-blockquote, pre {
-    width: 70%;
-    margin: 1.9rem 0 1.9rem 3.75rem;
-    padding: 1.9rem 1.25rem 1.9rem 1.25rem;
-    border: solid 5px transparent;
+blockquote,
+pre {
+  width: 70%;
+  margin: 1.9rem 0 1.9rem 3.75rem;
+  padding: 1.9rem 1.25rem 1.9rem 1.25rem;
+  border: solid 5px transparent;
 }
 
 blockquote {
-    font-style: italic;
-    border-left-color: var(--dark-blue);
-    background-color: white;
+  font-style: italic;
+  border-left-color: var(--dark-blue);
+  background-color: white;
 }
 
 pre {
-    border-left-color: var(--medium-blue);
+  border-left-color: var(--medium-blue);
 }
 
-
-#blog_articlepage a{
-    color: var(--wolf-blue);
-    transition: color 0.3s;
+#blog_articlepage a {
+  color: var(--wolf-blue);
+  transition: color 0.3s;
 }
 
-#blog_articlepage a:hover{
-    color: var(--dark-grey);
+#blog_articlepage a:hover {
+  color: var(--dark-grey);
 }
 
 #blog_articlepage p {
-    hyphens: auto;
-    text-align: justify;
+  hyphens: auto;
+  text-align: justify;
 }
 @media (min-width: 768px) {
-    #blog_articlepage p {
-        margin-left: 1.5rem;
-    }
+  #blog_articlepage p {
+    margin-left: 1.5rem;
+  }
 }
 
 /* Section header */
 /* ========================================================================== */
 
 #blog_articlepage_header {
-    display: flex;
-    max-width: inherit;
-    margin-bottom: 3rem;
-    word-wrap: break-word;
+  display: flex;
+  max-width: inherit;
+  margin-bottom: 3rem;
+  word-wrap: break-word;
 }
 
 #blog_articlepage_header_title {
-    margin-left: 1.9rem;
+  margin-left: 1.9rem;
 }
 
 #blog_articlepage_header_title_h1 {
-    font-size: 2rem;
-    color: var(--wolf-blue);
-    font-weight: 600;
+  font-size: 2rem;
+  color: var(--wolf-blue);
+  font-weight: 600;
 }
 
 #blog_articlepage_header_title_h1::before {
-    content: '';
-    position: absolute;
-    height: 0.3rem;
-    width: 1.5rem;
-    background-color: var(--light-electric-blue);
-    margin-top: 1.25rem;
-    margin-left: -2.25rem;
+  content: '';
+  position: absolute;
+  height: 0.3rem;
+  width: 1.5rem;
+  background-color: var(--light-electric-blue);
+  margin-top: 1.25rem;
+  margin-left: -2.25rem;
 }
 
 @media (min-width: 992px) {
-    /* On the left */
-    #blog_articlepage_header_img {
-        max-width: 60%;
-    }
-    /* On the right */
-    #blog_articlepage_header_title {
-        max-width: 40%;
-    }
+  /* On the left */
+  #blog_articlepage_header_img {
+    max-width: 60%;
+  }
+  /* On the right */
+  #blog_articlepage_header_title {
+    max-width: 40%;
+  }
 }
 
 @media (max-width: 991px) {
-    #blog_articlepage_header {
-        flex-direction: column;
-    }
-    #blog_articlepage_header_title_h1 {
-        margin-top: 3rem;
-    }
-    #blog_articlepage_header_img {
-        max-width: 100%;
-    }
+  #blog_articlepage_header {
+    flex-direction: column;
+  }
+  #blog_articlepage_header_title_h1 {
+    margin-top: 3rem;
+  }
+  #blog_articlepage_header_img {
+    max-width: 100%;
+  }
 }
 
 /* Section content */
@@ -177,24 +184,24 @@ pre {
 /* Waring: Some pictures could be to small in some screens */
 /* Like into http://blog.sogilis.fr/posts/2016-09-27-mise-place-livret-accueil/# */
 #blog_articlepage_content img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 @media (min-width: 1300px) {
-    #blog_articlepage_content {
-        margin: 0 -1rem 0 3.75rem;
-    }
+  #blog_articlepage_content {
+    margin: 0 -1rem 0 3.75rem;
+  }
 }
 
 /* Image on the bottom */
 /* ========================================================================== */
 #blog_articlepage_img_bottom {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 /* Section comment */
 /* ========================================================================== */
 
 #blog_articlepage_comments {
-    margin-top: 3rem;
+  margin-top: 3rem;
 }
