--- a/site/themes/sogilis/layouts/partials/footer.html
+++ b/site/themes/sogilis/layouts/partials/footer.html
@@ -12,7 +12,7 @@
     </section>
 
     <section id="sofooterContactgrid">
-      <div id="sofooterContactgridTitle" class="title_level_1">Contact</div>
+      <div id="sofooterContactgridTitle" class="footer-title title_level_1">Contact</div>
 
       <div id="sofooterContactgridContactus">
         <a class="btn_dark_grey" href="https://sogilis.fr/contact.html">
@@ -108,7 +108,7 @@
     </section>
 
     <section id="sofooterServices" class="liens_pages">
-      <div class="title_level_1">{{ i18n "services" }}</div>
+      <div class="footer-title title_level_1">{{ i18n "services" }}</div>
       <ul>
         <li>
           <a href="https://sogilis.fr/services-applications-cloud-native.html"
@@ -129,7 +129,7 @@
     </section>
 
     <section id="sofooterCompany" class="liens_pages">
-      <div class="title_level_1">{{ i18n "theCompany" }}</div>
+      <div class="footer-title title_level_1">{{ i18n "theCompany" }}</div>
       <ul>
         <li>
           <a href="https://sogilis.fr/vision.html">{{ i18n "ourVision" }}</a>
